feat(iam): record member and Group changes, and scoped managers reaching past their Groups
A refusal is written after its transaction ends: raised while the Tenant row
is locked FOR UPDATE, an insert in a second transaction would wait on that
lock for its foreign key and never return.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>